--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "main.py",
-            "type": "python",
+            "name": "main.go",
+            "type": "go",
             "request": "launch",
-            "program": "main.py",
-            "console": "integratedTerminal",
-            "justMyCode": true
+            "mode": "auto",
+            "program": "main.go"
         }
     ]
 }
